err/anthill.skinner.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/anthill'...
Listing './lib/python3.5/site-packages/anthill/skinner'...
Listing './lib/python3.5/site-packages/anthill/skinner/browser'...
Compiling './lib/python3.5/site-packages/anthill/skinner/browser/handling.py'...
***   File "./lib/python3.5/site-packages/anthill/skinner/browser/handling.py", line 73
    raise Exception, 'Error looking up auth validation provider!'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anthill/skinner/browser/navigation.py'...
***   File "./lib/python3.5/site-packages/anthill/skinner/browser/navigation.py", line 151
    raise Exception, 'Argument must be a list. Is of type: %s' % type(listing)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/anthill/skinner/handler.py'...
***   File "./lib/python3.5/site-packages/anthill/skinner/handler.py", line 31
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anthill/skinner/profiles'...
Listing './lib/python3.5/site-packages/anthill/skinner/profiles/skinner'...
Listing './lib/python3.5/site-packages/anthill/skinner/skins'...
Listing './lib/python3.5/site-packages/anthill/skinner/skins/anthill_skinner_templates'...
Listing './lib/python3.5/site-packages/anthill/skinner/templates'...
Listing './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme'...
Listing './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+'...
Listing './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+/+package+'...
Listing './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+/+package+/browser'...
Compiling './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+/+package+/browser/navigation.py'...
***   File "./lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+/+package+/browser/navigation.py", line 142
    raise Exception, 'Argument must be a list. Is of type: %s' % type(listing)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+/+package+/profiles'...
Listing './lib/python3.5/site-packages/anthill/skinner/templates/base_skinner_theme/+namespace_package+/+package+/skins'...
Listing './lib/python3.5/site-packages/anthill/tal'...
Listing './lib/python3.5/site-packages/anthill/tal/macrorenderer'...
Compiling './lib/python3.5/site-packages/anthill/tal/macrorenderer/engine.py'...
***   File "./lib/python3.5/site-packages/anthill/tal/macrorenderer/engine.py", line 19
    raise Exception, 'Did not find macro named %s' % self.mn
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/anthill.skinner-0.8.egg-info'...
Listing './lib/python3.5/site-packages/anthill.tal.macrorenderer-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/autopermission'...
Listing './lib/python3.5/site-packages/collective.autopermission-1.0b2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
